--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
       }
     </style>
   </head>
-  <body style="font-family: sans-serif;background:#000;color:#fff;" onbeforeunload="return(1)">
+  <body style="font-family: sans-serif;background:#000;color:#fff;">
     <h1>Welcome to Mafia Tools!</h1>
+    <h3>These are the tools I made for the Cornell Mafia Club during my 2-year term as Webmaster.</h3>
     <p>Are you looking for Cornell Mafia Club's homepage? <a href="https://mafiaclub.github.io">Here</a>. If not, here are the things I made.</p>
     <ul>
       <li><a href="mod.html">UI to organize game moderation better than typing in a regular document</a></li>
       <li><a href="superclosed.html">My template for fancy Super Closed roles</a></li>
       <li><a href="automod.html">Play Mafia on a shared device without a human moderator</a></li>
     </ul>
+    <footer style="position:fixed;bottom:0%">Check me out: <a href="https://github.com/Stunion235">GitHub</a> <a href="https://www.linkedin.com/in/anirudh-tenneti-93630328a">LinkedIn</a></footer>
   </body>
 </html>
