--- a/superclosed.html
+++ b/superclosed.html
@@ -47,7 +47,7 @@
         <dialog id="help">
             <button onclick="this.parentElement.close()">Close</button>
             <h2 class="popup">HELP</h2>
-            <div>This is my template for super closed games. I bet it looks nicer than your notes app. Mobile not recommended.</div>
+            <div>This is the Super Closed game template I made as part of my <a href="/MafiaTools">Mafia Tools</a> project. I bet it looks nicer than your notes app. Mobile not recommended.</div>
             <h3>Writing Roles</h3>
             <div>The New Role button adds a basic role format: name, side, lore, and ability description. If you want another format, you can add individual parts using the "Add to current role" buttons. It is fully editable, and you can hit Enter to expand text to more lines. If you delete all the text in a component, it will disappear (otherwise the empty space would remain and have to be removed in the developer tools). Note that the "current role" is the one you last added/edited, which may not necessarily be the one on screen.</div>
             <br>
