--- a/automod.html
+++ b/automod.html
@@ -6,11 +6,15 @@
     <script src="roleProps.js"></script>
     <script src="automod.js"></script>
     <style>
+      a {
+        color:#88f
+      }
       dialog {
         width:100%;
         height:100%;
         background:#000;
         color:#fff;
+        border-color:#0000;
       }
       .entry {
         width: 275px;
@@ -38,6 +42,21 @@
       }
       .third {
         color:#66f;
+      }
+      .fourth {
+        color:#b0b;
+      }
+      .town:hover {
+        color:#0f0;
+      }
+      .mafia:hover {
+        color:#f55;
+      }
+      .third:hover {
+        color:#aaf;
+      }
+      .fourth:hover {
+        color:#f0f;
       }
       .num {
         text-align:center;
@@ -89,13 +108,23 @@
       <h2 class="popup">This is what happened last night. You may tell a fun story explaining this as long as it contains all of the below events.</h2>
       <h3>If there are no deaths below, no one died!</h3>
       <ul id="announcements"></ul>
-      <button onclick="Id('result').close();startDay();">Click when done announcing</button>
+      <button onclick="Id('result').close();gameOver||afterAnnouncements();">Click when done announcing</button>
     </dialog>
     <dialog id="day"><h1 class="popup">Daytime</h1>
-      <label>Who is getting voted out?</label><select id="vote"></select>
+      <h3 id="voteInfo"></h3>
+      <label>Who is getting voted out? </label><select id="vote"></select>
       <p id="skipCount"></p>
+      <p id="reblockCount"></p>
       <button onclick="vote()" id="confirm">Confirm Vote</button>
       <button onclick="endDay()" id="night">End Day</button>
+      <button onclick="tonight().accused=0;startNominations();Id('reblockCount').innerText=`The town has reblocked ${++reblockCount} time(s).`;" id="reblock">Reblock</button>
+    </dialog>
+    <dialog id="block"><h1 class="popup">Nominations</h1>
+      <h2 id="blockSize"></h2>
+      <h2>The block currently consists of:</h2>
+      <p id="blocklist"></p>
+      <div id="votes"></div>
+      <button onclick="Id('block').close();startVotes();" id="endBlock">Start Defenses</button>
     </dialog>
     <dialog id="misc">
       <h1 class="popup">Info</h1>
@@ -105,7 +134,7 @@
     <dialog id="help">
       <button onclick="Id('help').close()">OK</button>
       <h1 class="popup">HELP</h1>
-      <p>Automod was created by Anirudh Tenneti with the intent of making the social deduction game Mafia (the version played by <a href="https://mafiaclub.github.io">Cornell Mafia Club</a>) playable by everyone without needing an extra person to moderate. Better yet, as a computer program, Automod is not prone to human error*. The days of mod fails are gone.</p>
+      <p>I created Automod as part of my <a href="/MafiaTools">Mafia Tools</a> project with the intent of making the social deduction game Mafia (the version played by <a href="https://mafiaclub.github.io">Cornell Mafia Club</a>) playable by everyone without needing an extra person to moderate. Better yet, as a computer program, Automod is not prone to human error*. The days of mod fails are gone.</p>
       <h3>Setup</h3>
       <p>Players enter their names in the text box. To minimize hassle, players should sit in a circle with names entered in clockwise seat order (i.e. the person on your right, then you, then the person on your left, and so on). Once this is done, each player, without showing the device to others, will receive a role and a number. Claiming a role is OK, but discussion of player numbers is forbidden to avoid metagaming. Don't forget the number, as you will be woken up based on it!</p>
       <h3>Night</h3>
@@ -114,7 +143,7 @@
       <p>When all night actions are done, a random person will be told to wake everyone up. At this point, daytime can be led by any player, preferably a dead player since living players would be discussing the game. The day can be run however you want, as long as the town has a chance to either vote 1 person out or abstain. Then, everyone goes to sleep, the device is handed to any living player, and the game continues until any side wins.</p>
       <p>*Unless I made a mistake in coding. With so many roles, it's possible. If something seems off, send a bug report using the contact link on the club's <a href="https://mafiaclub.github.io">homepage</a> and describe what led to the error.</p>
       <h3>Supported roles</h3>
-      <p>Not all roles can be supported because some pose difficulties for a webpage to moderate, for example, those that affect voting or rely on seat positions. Visit the <a href="https://mafiaclub.github.io">club website</a> to see these roles' abilities.</p>
+      <p>Not all roles can be supported because some pose difficulties for a webpage to moderate, for example, those that affect voting or rely on seat positions. Hover over a role to see its ability.</p>
       <ul id="roleList"></ul>
     </dialog>
     <div class="container"><h1>Game Setup</h1>
@@ -124,6 +153,8 @@
         <option value="plus">Standard+</option>
         <option value="all">Deluxe</option>
       </select>
+      <br><label><abbr title="If yes, Automod will try to exclude roles like Townie and Miller with no ability.">Avoid "boring" Townies:</abbr></label><input type="checkbox" id="noBoring" checked>
+      <br><label><abbr title="If yes, votes will work with a block as per Cornell Mafia Club rules. Else, anyone can be voted without using a block, allowing for other styles of daytime play.">Play with block?</abbr></label><input type="checkbox" id="useBlock" checked>
       <p>Type all players' names below, each on a new line. No duplicates.</p><textarea id="names"></textarea>
       <button onclick="giveRoles()">Start</button>
       <br><button onclick="showHelp()">Help</button>
