--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="superclosed.html">My template for fancy Super Closed roles</a></li>
       <li><a href="automod.html">Play Mafia on a shared device without a human moderator</a></li>
     </ul>
-    <footer style="position:fixed;bottom:0%">Check me out: <a href="https://github.com/Stunion235">GitHub</a> <a href="https://www.linkedin.com/in/anirudh-tenneti-93630328a">LinkedIn</a></footer>
+    <a href="devnotes.html">Dev notes, for CS students or otherwise</a>
+    <footer style="position:fixed;bottom:0%">Check me out: <a href="https://github.com/anirudhtenneti">GitHub</a> <a href="https://www.linkedin.com/in/anirudh-tenneti-93630328a">LinkedIn</a></footer>
   </body>
 </html>
