--- a/superclosed.html
+++ b/superclosed.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <script src="superclosed.js"></script>
         <style>
+            a {
+                color:#88f
+            }
             section {
                 margin-bottom:100%;
             }
@@ -42,7 +45,7 @@
         </style>
     </head>
     <body style="font-family:sans-serif;background:#000;color:#fff;" onbeforeunload="return(save())" onload="init()">
-        <header style="background:#0006;top:0;position:fixed;width:100%;padding:10px"><button onclick="document.getElementById('help').showModal()">Help</button><button onclick="document.getElementById('set').showModal()">Settings</button><button onclick="addRole()">New Role</button><button onclick="document.getElementsByTagName('footer')[0].style.display='';this.parentElement.style.display='none';">Hide menu (recommended before giving roles to players)</button><p></p><label>Add to current role:</label><button onclick="addName(currentRole)">Name</button><button onclick="addSide(currentRole)">Side</button><button onclick="addLore(currentRole)">Lore</button><button onclick="addDesc(currentRole)">Text</button><button onclick="addBad(currentRole)">Bad Attribute</button><button onclick="addGood(currentRole)">Good Attribute</button><button onclick="addNeutral(currentRole)">Neutral Attribute</button><p></p><label>Current role: </label><input readonly id="cur"><button onclick="jumpToCurr()">Jump to current role</button><button onclick="addRole(currentRole)">Copy current role</button><button onclick="jumpToCurr();setTimeout(()=>{if(confirm('Sure?')){currentRole.remove();setCurr(null)}},200)">Delete current role</button><p></p><button onclick="saveGame()">Export</button><button id="load">Import</button><button onclick="if(confirm(`This will delete your game. Export it first if you don't want to lose it.`)&&confirm('Sure?')){loadGame('')}">Clear</button><hr></header>
+        <header style="background:#0006;top:0;position:fixed;width:100%;padding:10px"><button onclick="document.getElementById('help').showModal()">Help</button><button onclick="document.getElementById('set').showModal()">Settings</button><button onclick="addRole()">New Role</button><button onclick="document.getElementsByTagName('footer')[0].style.display='';this.parentElement.style.display='none';">Hide menu (recommended before giving roles to players)</button><p></p><label>Add to current role:</label><button onclick="addName(currentRole)">Name</button><button onclick="addSide(currentRole)">Side</button><button onclick="addLore(currentRole)">Lore</button><button onclick="addDesc(currentRole)">Text</button><button onclick="addBad(currentRole)">Bad Attribute</button><button onclick="addGood(currentRole)">Good Attribute</button><button onclick="addNeutral(currentRole)">Neutral Attribute</button><p></p><label>Current role: </label><input readonly id="cur"><button onclick="jumpToCurr()">Jump to current role</button><button onclick="addRole(currentRole)">Copy current role</button><button onclick="jumpToCurr();setTimeout(()=>{if(confirm(`Delete ${document.getElementById('cur').value}?`)){currentRole.remove();setCurr(null)}},200)">Delete current role</button><p></p><button onclick="saveGame()">Export</button><button id="load">Import</button><button onclick="if(confirm(`This will delete your game. Export it first if you don't want to lose it.`)&&confirm('Sure?')){loadGame('')}">Clear</button><hr></header>
         <main style="font-family:math;padding-top:150px"></main>
         <dialog id="help">
             <button onclick="this.parentElement.close()">Close</button>
